2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
        * Fixed server connection synchronization issues in the SELECT
          cache code (ensure server failures result in server connections
          being fully shut down and removed from connection cache).

2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
	* When NO or BAD response is returned from the server against
	  a LOGIN or AUTHENTICATE request, we now log the full server
	  response and pass it back to the client (useful if client
	  is watching for RFC 5530 response codes).  See:
	  http://thread.gmane.org/gmane.mail.squirrelmail.imapproxy/4

2011-03-11  Paul Lesniewski <paul@squirrelmail.org>
	* Fixed server connection synchronization issue that occurred when
	  clients closed their connection immediately after logging in and
	  associated security issue of closing such server connections
	  without invalidating the connection in the internal connection
          cache (thanks to Jose Celestino).

2011-03-07  Paul Lesniewski <paul@squirrelmail.org>
	* Added information about how to use squirrelmail-imap_proxy
	  with servers that are only available via imaps

2011-01-16  Paul Lesniewski <paul@squirrelmail.org>
	* Added the ability to authenticate to the IMAP server
          using SASL plain authentication with fixed authentication
          credentials (thanks to Jeffrey Arbuckle and Martin Smith)

2010-10-29  Paul Lesniewski <paul@squirrelmail.org>
	* Fixed compilation warnings when openssl is not available.

2010-10-28  Paul Lesniewski <paul@squirrelmail.org>
	* Increased default buffer sizes.

	* Fixed possible buffer overflow issue and a few other small
          issues, complements Jose Celestino.  Thanks also to Tomas
          Lindroos.

	* Fixed LOGIN command so that it handles literal arguments
          correctly.

2010-08-19  Paul Lesniewski <paul@squirrelmail.org>
	* Added several warnings that try to catch the case where someone