@@ -1,4 +1,8 @@
 2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
+        * Add restart operation to (linux) init script
+        * Add BSD-style init script (thanks to Emmanuel Dreyfus)
+
+2011-04-17  Paul Lesniewski <paul@squirrelmail.org>
         * Fixed server connection synchronization issues in the SELECT
           cache code (ensure server failures result in server connections
           being fully shut down and removed from connection cache).
